--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
                 <ul class="content">
                     <li>
                         <div class="img">
-                            <img src="/img/menu_bg__23K07p125u.jpg" alt="">
+                            <img src="img/_DSC973702__24A15NlgPy.jpg" alt="">
                         </div>
                         <div class="item">
                             <div class="title">
-                                <h2>FIELD</h2>
-                                <p>環境</p>
+                                <h2>EVENTS</h2>
+                                <p>共樂</p>
                             </div>
                             <div class="txt">
                                 <div class="language">
@@ -186,7 +186,7 @@
                                 </div>
                                 <p>執子之手，與子偕老，兩小無猜、青梅竹馬到天造地設的一雙</p>
                             </div>
-                            <div class="brand_about">
+                            <div class="event_about">
                                 <button>了解更多</button>
                                 <div class="arrow"></div>
                             </div>
@@ -194,12 +194,12 @@
                     </li>
                     <li>
                         <div class="img">
-                            <img src="/img/menu_bg__23K07p125u.jpg" alt="">
+                            <img src="/img/_DSC99232__24A15PTMS2.jpg" alt="">
                         </div>
                         <div class="item">
                             <div class="title">
-                                <h2>FIELD</h2>
-                                <p>環境</p>
+                                <h2>EVENTS</h2>
+                                <p>共樂</p>
                             </div>
                             <div class="txt">
                                 <div class="language">
@@ -208,7 +208,7 @@
                                 </div>
                                 <p>有一種旅行，呼朋引伴、齊聚一堂，當我們同在一起創造回憶。</p>
                             </div>
-                            <div class="brand_about">
+                            <div class="event_about">
                                 <button>了解更多</button>
                                 <div class="arrow"></div>
                             </div>
@@ -216,12 +216,12 @@
                     </li>
                     <li>
                         <div class="img">
-                            <img src="/img/menu_bg__23K07p125u.jpg" alt="">
+                            <img src="/img/_DSC00682__24A15Bz13f.jpg" alt="">
                         </div>
                         <div class="item">
                             <div class="title">
-                                <h2>FIELD</h2>
-                                <p>環境</p>
+                                <h2>EVENTS</h2>
+                                <p>共樂</p>
                             </div>
                             <div class="txt">
                                 <div class="language">
@@ -230,7 +230,7 @@
                                 </div>
                                 <p>離開辦公室、辦公桌，接近自然也能辦公事。</p>
                             </div>
-                            <div class="brand_about">
+                            <div class="event_about">
                                 <button>了解更多</button>
                                 <div class="arrow"></div>
                             </div>
@@ -238,6 +238,125 @@
                     </li>
                 </ul>
             </div>
+            <!-- Rooms -->
+            <div class="rooms">
+                <div class="title">
+                    <h2>ROOMS</h2>
+                    <p>棲家</p>
+                </div>
+                <h3>牧場裡的溫暖住所</h3>
+                <div class="wrap">
+                    <div class="room_list">
+                        <div class="clous">
+                            <div class="img">
+                                <img src="/img/DSC03345-HDR-3__24B09ATRBK.jpg" alt="">
+                            </div>
+                            <div class="open_clous">
+                                <div class="clous_title">采霞</div>
+                                <div class="number">四人房</div>
+                                <div class="txt">
+                                    <p>舞牛森經典設計款房型</p>
+                                    <p>遠眺樹林庭院景致</p>
+                                    <p>享受談天休憩的窗景沙發</p>
+                                </div>
+                                <div class="more">
+                                    <h2>了解更多<span>></span></h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="img ">
+                                <img src="/img/DSC02750-HDR-1__23L031EFc8.jpg" alt="">
+                            </div>
+                            <div class="open_collection">
+                                <div class="collection_title">山采</div>
+                                <div class="number">雙人房</div>
+                                <div class="txt">
+                                    <p>兩人專屬的挑高精緻客房</p>
+                                    <p>擁有居高遠眺森林的景致</p>
+                                    <p>享受談天休憩的窗景沙發</p>
+                                </div>
+                                <div class="more">
+                                    <h2>了解更多<span>></span></h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mountain">
+                            <div class="img">
+                                <img src="/img/DSC03437-HDR__24B02AWD9r.jpg" alt="">
+                            </div>
+                            <div class="open_mountain">
+                                <div class="mountains_title">遼山</div>
+                                <div class="number">四人房</div>
+                                <div class="txt">
+                                    <p>全館唯兩間臨接山稜與海景</p>
+                                    <p>擁有大片落地窗的陽台客房</p>
+                                </div>
+                                <div class="more">
+                                    <h2>了解更多<span>></span></h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="morioka">
+                            <div class="img">
+                                <img src="/img/DSC029552-HDR-1__23L22SLMjc.jpg" alt="">
+                            </div>
+                            <div class="open_morioka">
+                                <div class="morioka_title">森丘</div>
+                                <div class="number">雙人房</div>
+                                <div class="txt">
+                                    <p>兩人專屬角隅客房</p>
+                                    <p>坐擁牧場山丘景致</p>
+                                    <p>享受休憩的窗景沙發</p>
+                                </div>
+                                <div class="more">
+                                    <h2>了解更多<span>></span></h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reflection">
+                            <div class="img">
+                                <img src="/img/DSC044972-HDR__24B13SMX7Y.jpg" alt="">
+                            </div>
+                            <div class="open_reflection">
+                                <div class="reflection_title">綠映</div>
+                                <div class="number">四人房</div>
+                                <div class="txt">
+                                    <p>擁有雙套衛浴及浴缸</p>
+                                    <p>可與家人談天休憩的客廳區</p>
+                                    <p>以及坐擁樹林景致的獨享陽台</p>
+                                </div>
+                                <div class="more">
+                                    <h2>了解更多<span>></span></h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="linshan">
+                            <div class="img">
+                                <img src="/img/DSC044742-HDR__24B13BCLCq.jpg" alt="">
+                            </div>
+                            <div class="open_linshan">
+                                <div class="linshan_title">臨山</div>
+                                <div class="number">四人房</div>
+                                <div class="txt">
+                                    <p>專屬的挑高精豪華客房</p>
+                                    <p>擁有雙套衛浴及浴缸</p>
+                                    <p>可與家人談天休憩的客廳區</p>
+                                    <p>以及坐擁山景的獨享陽台</p>
+                                </div>
+                                <div class="more">
+                                    <h2>了解更多<span>></span></h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="rooms_about">
+                    <button>更多房型介紹</button>
+                    <div class="arrow"></div>
+                </div>
+            </div>
+
         </div>
     </body>
 
