--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- header -->
             <div class="header">
                 <div class="img">
-                    <img src="/img/logo.png" alt="">
+                    <img src="img/logo.png" alt="">
                 </div>
                 <div class="burger">
                     <div class="menu">
@@ -38,7 +38,7 @@
                         <p>></p>
                     </div>
                     <div class="message_box">
-                        <img src="/img/mail.png" alt="">
+                        <img src="img/mail.png" alt="">
                         <h2>聯絡我們</h2>
                     </div>
                 </div>
@@ -49,19 +49,19 @@
                 <ul class="header_bg">
                     <li>
                         <p>01/03</p>
-                        <img src="/img/menu_bg__23K07p125u.jpg" alt="">
+                        <img src="img/menu_bg__23K07p125u.jpg" alt="">
                         <h1>舞牛森旅</h1>
                         <h2>森青身輕 翩翩而舞 Woods are refreshing</h2>
                     </li>
                     <li>
                         <p>02/03</p>
-                        <img src="/img/DJI_0757web__24D28fDngC.jpg" alt="">
+                        <img src="img/DJI_0757web__24D28fDngC.jpg" alt="">
                         <h1>舞牛森旅</h1>
                         <h2>森青身輕 翩翩而舞 Woods are refreshing</h2>
                     </li>
                     <li>
                         <p>03/03</p>
-                        <img src="/img/IMG_7431web__24D28x4xxl.jpg" alt="">
+                        <img src="img/IMG_7431web__24D28x4xxl.jpg" alt="">
                         <h1>舞牛森旅</h1>
                         <h2>森青身輕 翩翩而舞 Woods are refreshing</h2>
                     </li>
@@ -86,7 +86,7 @@
                 <h3>WOODLAND</h3>
                 <h3>DISCOVERIMG</h3>
                 <div class="img">
-                    <img src="/img/2__24A07m2MdF.jpg" alt="">
+                    <img src="img/2__24A07m2MdF.jpg" alt="">
                 </div>
                 <ul>
                     <li>
@@ -120,42 +120,42 @@
                     <ul class="field_list">
                         <li>
                             <div class="img">
-                                <img src="/img/IMG_7660__24A22yxM4w.jpg" alt="">
+                                <img src="img/IMG_7660__24A22yxM4w.jpg" alt="">
                             </div>
                             <h2>森林牧場</h2>
                             <p>森林環抱的牧場，放牛的孩子都幸福起來</p>
                         </li>
                         <li>
                             <div class="img">
-                                <img src="/img/DJI_054502__24A09v6ZwE.jpg" alt="">
+                                <img src="img/DJI_054502__24A09v6ZwE.jpg" alt="">
                             </div>
                             <h2>樹冠散策</h2>
                             <p>像一座鵲橋，在樹冠層散策，有高度的漫步。</p>
                         </li>
                         <li>
                             <div class="img">
-                                <img src="/img/IMG_184102__24A07EmGYa.jpg" alt="">
+                                <img src="img/IMG_184102__24A07EmGYa.jpg" alt="">
                             </div>
                             <h2>天空鏡子</h2>
                             <p>生態池是一面鏡，映著綠樹天光，週邊鑲滿了花邊。</p>
                         </li>
                         <li>
                             <div class="img">
-                                <img src="/img/DSC037592__24A17FhX0w.jpg" alt="">
+                                <img src="img/DSC037592__24A17FhX0w.jpg" alt="">
                             </div>
                             <h2>森之庭園</h2>
                             <p>方方的宅院，繁華似錦的花園。</p>
                         </li>
                         <li>
                             <div class="img">
-                                <img src="/img/_DSC91332__24A15HpkgB.jpg" alt="">
+                                <img src="img/_DSC91332__24A15HpkgB.jpg" alt="">
                             </div>
                             <h2>森饗廳</h2>
                             <p>映入森林與陽光，木質韻味的自然系大廳。</p>
                         </li>
                         <li>
                             <div class="img">
-                                <img src="/img/20180108_003962__24A22ocHeS (1).jpg" alt="">
+                                <img src="img/20180108_003962__24A22ocHeS (1).jpg" alt="">
                             </div>
                             <h2>酪農</h2>
                             <p>乳與白，回溯生命的起初，我們都是喝奶長大的。</p>
@@ -194,7 +194,7 @@
                     </li>
                     <li>
                         <div class="img">
-                            <img src="/img/_DSC99232__24A15PTMS2.jpg" alt="">
+                            <img src="img/_DSC99232__24A15PTMS2.jpg" alt="">
                         </div>
                         <div class="item">
                             <div class="title">
@@ -216,7 +216,7 @@
                     </li>
                     <li>
                         <div class="img">
-                            <img src="/img/_DSC00682__24A15Bz13f.jpg" alt="">
+                            <img src="img/_DSC00682__24A15Bz13f.jpg" alt="">
                         </div>
                         <div class="item">
                             <div class="title">
@@ -249,7 +249,7 @@
                     <div class="room_list">
                         <div class="clous">
                             <div class="img">
-                                <img src="/img/DSC03345-HDR-3__24B09ATRBK.jpg" alt="">
+                                <img src="img/DSC03345-HDR-3__24B09ATRBK.jpg" alt="">
                             </div>
                             <div class="open_clous">
                                 <div class="clous_title">采霞</div>
@@ -266,7 +266,7 @@
                         </div>
                         <div class="collection">
                             <div class="img ">
-                                <img src="/img/DSC02750-HDR-1__23L031EFc8.jpg" alt="">
+                                <img src="img/DSC02750-HDR-1__23L031EFc8.jpg" alt="">
                             </div>
                             <div class="open_collection">
                                 <div class="collection_title">山采</div>
@@ -283,7 +283,7 @@
                         </div>
                         <div class="mountain">
                             <div class="img">
-                                <img src="/img/DSC03437-HDR__24B02AWD9r.jpg" alt="">
+                                <img src="img/DSC03437-HDR__24B02AWD9r.jpg" alt="">
                             </div>
                             <div class="open_mountain">
                                 <div class="mountains_title">遼山</div>
@@ -299,7 +299,7 @@
                         </div>
                         <div class="morioka">
                             <div class="img">
-                                <img src="/img/DSC029552-HDR-1__23L22SLMjc.jpg" alt="">
+                                <img src="img/DSC029552-HDR-1__23L22SLMjc.jpg" alt="">
                             </div>
                             <div class="open_morioka">
                                 <div class="morioka_title">森丘</div>
@@ -316,7 +316,7 @@
                         </div>
                         <div class="reflection">
                             <div class="img">
-                                <img src="/img/DSC044972-HDR__24B13SMX7Y.jpg" alt="">
+                                <img src="img/DSC044972-HDR__24B13SMX7Y.jpg" alt="">
                             </div>
                             <div class="open_reflection">
                                 <div class="reflection_title">綠映</div>
@@ -333,7 +333,7 @@
                         </div>
                         <div class="linshan">
                             <div class="img">
-                                <img src="/img/DSC044742-HDR__24B13BCLCq.jpg" alt="">
+                                <img src="img/DSC044742-HDR__24B13BCLCq.jpg" alt="">
                             </div>
                             <div class="open_linshan">
                                 <div class="linshan_title">臨山</div>
