--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://web.cdn.openinstall.io/openinstall.js"></script>
-    <script src="https://kit.fontawesome.com/78e6f741f4.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/64fccb9e01.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -422,7 +422,65 @@
             </div>
             <!-- footer -->
             <div class="footer">
+                <div class="footer_box">
+                    <div class="wrap">
+                        <div class="left_box">
+                            <div class="img">
+                                <img src="img/logo_m.png" alt="">
+                            </div>
+                            <div class="title">
+                                <h2>舞牛森度假飯店</h2>
+                            </div>
+                            <p>苗栗縣旅館090號</p>
+                            <div class="txt">
+                                <p>Copyright © 2024 舞牛森度假飯店 All Rights Reserved.</p>
+                                <div class="writer">
+                                    <h3>Design</h3> by <span>iBest</span></div>
+                            </div>
+                        </div>
 
+                        <div class="middle_box">
+                            <div class="title">CONTACT</div>
+                            <div class="message">
+                                <h2>ADD.</h2>
+                                <p>苗栗縣通霄鎮南和里165-5號</p>
+                            </div>
+                            <div class="message">
+                                <h2>TEL.</h2>
+                                <p>037-783-899</p>
+                            </div>
+                            <div class="message">
+                                <h2>FAX.</h2>
+                                <p>037-783-288</p>
+                            </div>
+                            <div class="message">
+                                <h2>EMAIL.</h2>
+                                <p>service@woodland.com.tw</p>
+                            </div>
+                            <div class="message">
+                                <h2>SNS.</h2>
+                                <div class="img">
+                                    <i class="fa fa-facebook-square"></i>
+                                    <i class="fa fa-instagram"></i>
+                                    <i class="fa-brands fa-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="right_box">
+                            <div class="title">SITE CONTENTS</div>
+                            <ul>
+                                <li>飯店簡介</li>
+                                <li>服務設施</li>
+                                <li>客房介紹</li>
+                                <li>
+                                    交通位置</li>
+                                <li>新訊與活動</li>
+                                <li>
+                                    聯絡我們</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
