--- a/index.html
+++ b/index.html
@@ -472,11 +472,9 @@
                                 <li>飯店簡介</li>
                                 <li>服務設施</li>
                                 <li>客房介紹</li>
-                                <li>
-                                    交通位置</li>
+                                <li>交通位置</li>
                                 <li>新訊與活動</li>
-                                <li>
-                                    聯絡我們</li>
+                                <li>聯絡我們</li>
                             </ul>
                         </div>
                     </div>
