--- a/index.html
+++ b/index.html
@@ -75,8 +75,27 @@
                     <h2>NEWS</h2>
                     <div class="item">
                         <div class="title">全新試營運，歡迎您的參與!嘗鮮價熱賣中! </div>
-                        <div class="txt">了解更多<span>></span></div>
+                        <div class="txt">
+                            <h3>了解更多</h3><span>></span></div>
                         <a href="" title="全新試營運，歡迎您的參與!嘗鮮價熱賣中! 了解更多"></a>
+                    </div>
+                </div>
+                <div class="remind">
+                    <div class="wrap">
+                        <p>依據歐盟施行的個人資料保護法，我們致力於保護您的個人資料並提供您對個人資料的掌握。 </p>
+                        <p>按一下「全部接受」，代表您允許我們置放 Cookie 來提升您在本網站上的使用體驗、協助我們分析網站效能和使用狀況，以及讓我們投放相關聯的行銷內容。您可以在下方管理 Cookie 設定。 按一下「確認」即代表您同意採用目前的設定。</p>
+
+
+                    </div>
+                    <div class="hd_about">
+                        <div class="cookies">
+                            <button>管理Cookies</button>
+                            <div class="arrow"></div>
+                        </div>
+                        <div class="all_allow">
+                            <button>全部接受</button>
+                            <div class="arrow"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -424,6 +443,10 @@
             <div class="footer">
                 <div class="footer_box">
                     <div class="wrap">
+                        <div class="go_top">
+                            <div class="line"></div>
+                            <h2>PAGE TOP</h2>
+                        </div>
                         <div class="left_box">
                             <div class="img">
                                 <img src="img/logo_m.png" alt="">
@@ -438,7 +461,6 @@
                                     <h3>Design</h3> by <span>iBest</span></div>
                             </div>
                         </div>
-
                         <div class="middle_box">
                             <div class="title">CONTACT</div>
                             <div class="message">
@@ -582,12 +604,11 @@
                         pauseOnFocus: false,
                     });
                 });
-                onMounted(() => {
-                });
+                onMounted(() => {});
 
                 return {};
             },
         }).mount("#app");
     </script>
 
-</html> 
+</html>
