--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="start_bg">
                 <div class="img">
-                    <img src="/img/logo_cow.png" alt="">
+                    <img src="img/logo_cow.png" alt="">
                 </div>
             </div>
             <div class="start_ad">
