--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="
+    https://cdn.jsdelivr.net/npm/jquery.session@1.0.0/jquery.session.min.js
+    "></script>
 
     <body>
         <div id="app" class="all_body">
@@ -114,14 +117,13 @@
             </div>
             <div class="start_bg">
                 <div class="img">
-                    <img src="img/logo_cow.png" alt="">
+                    <img src="img/logo.png" alt="">
                 </div>
             </div>
             <div class="start_ad">
                 <div class="mask"></div>
                 <div class="inner">
                     <div class="inner_close">
-                        <h1>X</h1>
                     </div>
                     <div class="txt">
                         <h2>全新房型試營運!</h2>
@@ -638,8 +640,19 @@
                         $(".header").addClass("on");
                     } else {}
                 }
-
                 window.onresize = reportWindowSize;
+
+                var params = sessionStorage['params'] || '';
+                console.log(params)
+                if (params == '') {
+                    console.log(1)
+               
+                    sessionStorage['params'] = '1';    
+                    $(function(){
+                        $(".start_bg").addClass("on");
+                    $(".start_ad").addClass("on");
+                    })          
+                }
 
                 function showMenu() {
                     if ($(window).scrollTop() > 150) {
@@ -661,43 +674,7 @@
                     }
                 }
 
-                function DoOne(key, method) {
-                    var v = getCookie(key);
-                    if (!v) {
-                        method("do something");
-                        //获取第二天凌晨到当前时间的秒数
-                        var tim_sec = 24 * 60 * 60 - (new Date().getHours() * 60 * 60 + new Date().getMinutes() * 60 + new Date().getSeconds());
-                        setCookie(key, "1", tim_sec);
-                    }
-                }
 
-                function dosome(msg) {
-                    $(".start_bg").addClass("on");
-                    $(".start_ad").addClass("on");
-                }
-                //写cookies 
-                function setCookie(name, value, second) {
-                    if (!second) {
-                        second = 7 * 24 * 60 * 60; //默认7天
-                    }
-                    var exp = new Date();
-                    exp.setTime(exp.getTime() + second * 1000);
-                    document.cookie = name + "=" + encodeURI(value) + ";expires=" + exp.toGMTString() + ";path=/";
-                }
-                //读取cookies 
-                function getCookie(name) {
-                    if (document.cookie.length > 0) {
-                        c_start = document.cookie.indexOf(name + "="); //获取字符串的起点
-                        if (c_start != -1) {
-                            c_start = c_start + name.length + 1; //获取值的起点
-                            c_end = document.cookie.indexOf(";", c_start); //获取结尾处
-                            if (c_end == -1) c_end = document.cookie.length; //如果是最后一个，结尾就是cookie字符串的结尾
-                            return decodeURI(document.cookie.substring(c_start, c_end)); //截取字符串返回
-                        }
-                    }
-                    return "";
-                }
-                DoOne("key", dosome)
                 $(document).ready(function() {
                     $('.header_bg').slick({
                         slidesToShow: 1,
